push some beta changes

--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -30,7 +30,7 @@
     }
   ] %>
   <div class="grid-rows-[1fr_auto] grid h-screen">
-    <div class="dark:bg-zinc-900 md:mx-auto md:max-w-screen-lg md:p-2 md:pt-16">
+    <div class="p-2 dark:bg-zinc-900 dark:text-zinc-50">
       <%= @inner_content %>
     </div>
     <div class="sticky bottom-0 flex w-full border-t bg-white p-1.5 dark:border-t-zinc-700 dark:bg-zinc-900">
