--- a/lib/gits_web/controllers/page_html/search.html.heex
+++ b/lib/gits_web/controllers/page_html/search.html.heex
@@ -1,15 +1,19 @@
-<h1 class="p-2 text-4xl">Events</h1>
-<div class="grid w-full gap-8 overflow-hidden p-2">
-  <div :for={event <- @events} class="flex items-center gap-2">
+<h1 class="mt-8 p-2 text-4xl font-light">Events</h1>
+<div class="mt-8 grid w-full gap-8 overflow-hidden p-2">
+  <.link
+    :for={event <- @events}
+    navigate={~p"/events/#{event.masked_id}"}
+    class="flex items-center gap-2 rounded-xl hover:bg-zinc-50 hover:dark:bg-zinc-800"
+  >
     <div class="aspect-[3/2] w-24 shrink-0 overflow-hidden rounded-lg">
       <img
         loading="eager"
-        src={Gits.Bucket.get_listing_image_path(event.account_id, event.id)}
+        src={Gits.Bucket.get_feature_image_path(event.account_id, event.id)}
         alt=""
         class="size-full object-cover transition-transform duration-300 ease-in-out group-hover:scale-110"
       />
     </div>
-    <div class="grid gap-1">
+    <div class="grid gap-0.5">
       <div class="inline-flex items-center gap-1">
         <span class="max-w-40 truncate text-xs font-medium">
           <%= if not is_nil(event.address) do %>
@@ -26,9 +30,12 @@
         </span>
       </div>
       <span class="truncate text-lg font-semibold"><%= event.name %></span>
-      <span :if={not is_nil(event.minimum_ticket_price)} class="whitespace-nowrap text-xs">
+      <span
+        :if={not is_nil(event.minimum_ticket_price)}
+        class="whitespace-nowrap text-xs font-medium text-zinc-500 dark:text-zinc-400"
+      >
         <%= resolve_price_range_label(event) %>
       </span>
     </div>
-  </div>
+  </.link>
 </div>
