--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -30,10 +30,11 @@
     }
   ] %>
   <div class="grid-rows-[1fr_auto] grid h-screen">
-    <div class="dark:bg-zinc-900 dark:text-zinc-50">
+    <div class=""></div>
+    <div class="max-w-screen-xl dark:bg-zinc-900 dark:text-zinc-50 xl:mx-auto">
       <%= @inner_content %>
     </div>
-    <div class="sticky bottom-0 flex w-full justify-evenly border-t bg-white p-1.5 dark:border-t-zinc-700 dark:bg-zinc-900">
+    <div class="sticky bottom-0 flex w-full justify-evenly border-t bg-white p-1.5 dark:border-t-zinc-700 dark:bg-zinc-900 lg:hidden">
       <div :for={nav <- navigation} class="w-full grow">
         <.link
           navigate={nav.href}
@@ -52,7 +53,7 @@
     </div>
   </div>
 <% else %>
-  <.header user={@current_user} />
+  <.header signed_in={not is_nil(@current_user)} />
   <div class="min-h-[calc(100dvh-theme(space.40))] mx-auto flex w-full max-w-screen-xl grow flex-col justify-center gap-10 rounded-lg bg-white dark:bg-white">
     <%= @inner_content %>
   </div>
