--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -1,5 +1,6 @@
+<h1 class="mt-8 p-2 text-4xl font-light">Tickets</h1>
 <div class="min-h-[calc(100dvh-theme(space.28))] space-y-4 p-2 pt-6 lg:px-0">
-  <h1 class="text-xl font-semibold">My Tickets</h1>
+  <!-- <h1 class="text-xl font-semibold">My Tickets</h1> -->
   <div class="flex border-b">
     <span :for={i <- ["Coming up"]} class="px-4">
       <span class="block border-b-2 border-zinc-500 py-4 text-sm font-medium text-zinc-400 text-zinc-700">
