--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -30,7 +30,7 @@
     }
   ] %>
   <div class="grid-rows-[1fr_auto] grid h-screen lg:grid-rows-[auto_1fr]">
-    <div class="hidden items-center p-2 py-8 lg:mx-auto lg:flex lg:w-full lg:max-w-screen-xl">
+    <div class="hidden w-full items-center p-2 py-8 lg:mx-auto lg:flex lg:w-full lg:max-w-screen-xl">
       <div class="relative flex grow">
         <.link navigate="/" class="text-2xl font-black italic text-zinc-800 dark:text-zinc-100">
           GiTS
@@ -51,14 +51,14 @@
           ]}
           navigate={nav.href}
         >
-          <.icon name={nav.icon} />
+          <.icon name={if(nav.current, do: nav.icon_active, else: nav.icon)} />
           <span class="">
             <%= nav.label %>
           </span>
         </.link>
       </div>
     </div>
-    <div class="max-w-screen-xl dark:bg-zinc-900 dark:text-zinc-50 xl:mx-auto">
+    <div class="w-full max-w-screen-xl dark:bg-zinc-900 dark:text-zinc-50 xl:mx-auto">
       <%= @inner_content %>
     </div>
     <div class="sticky bottom-0 flex w-full justify-evenly border-t bg-white p-1.5 dark:border-t-zinc-700 dark:bg-zinc-900 lg:hidden">
