--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,88 +1,6 @@
-<%= if FunWithFlags.enabled?(:beta, for: @current_user) do %>
-  <% navigation = [
-    %{
-      label: :home,
-      icon: "hero-home",
-      icon_active: "hero-home-solid",
-      href: "/",
-      current: @current_tab == :home
-    },
-    %{
-      label: :search,
-      icon: "hero-magnifying-glass",
-      icon_active: "hero-magnifying-glass-solid",
-      href: "/search",
-      current: @current_tab == :search
-    },
-    %{
-      label: :tickets,
-      icon: "hero-ticket",
-      icon_active: "hero-ticket-solid",
-      href: "/my/tickets",
-      current: @current_tab == :tickets
-    },
-    %{
-      label: :profile,
-      icon: "hero-user",
-      icon_active: "hero-user-solid",
-      href: "/my/profile",
-      current: @current_tab == :profile
-    }
-  ] %>
-  <div class="grid-rows-[1fr_auto] grid h-screen overflow-auto lg:grid-rows-[auto_1fr]">
-    <div class="hidden w-full items-center p-2 py-4 lg:mx-auto lg:flex lg:w-full lg:max-w-screen-lg">
-      <div class="relative flex grow">
-        <.link navigate="/" class="text-2xl font-black italic text-zinc-800 dark:text-zinc-100">
-          GiTS
-        </.link>
-        <span class="text-[12px] leading-2 absolute -top-1 left-14 inline-flex items-center rounded-md px-1 font-medium text-yellow-800 dark:text-yellow-300">
-          Beta
-        </span>
-      </div>
-      <div class="flex gap-8">
-        <.link
-          :for={nav <- navigation |> Enum.filter(&(&1.label != :home))}
-          class={[
-            "flex items-center gap-2 rounded-lg text-sm py-2 px-3 font-medium hover:text-zinc-700 dark:hover:text-zinc-400 capitalize",
-            if(nav.current,
-              do: "text-zinc-800 bg-zinc-100 dark:bg-zinc-700 dark:text-zinc-200",
-              else: "text-zinc-400 dark:text-zinc-500"
-            )
-          ]}
-          navigate={nav.href}
-        >
-          <.icon name={if(nav.current, do: nav.icon_active, else: nav.icon)} />
-          <span class="">
-            <%= nav.label %>
-          </span>
-        </.link>
-      </div>
-    </div>
-    <div class="flex w-full max-w-screen-lg flex-col gap-4 dark:bg-zinc-900 dark:text-zinc-50 xl:mx-auto">
-      <%= @inner_content %>
-    </div>
-    <div class="sticky bottom-0 flex w-full justify-evenly border-t bg-white p-1.5 dark:border-t-zinc-700 dark:bg-zinc-900 lg:hidden">
-      <div :for={nav <- navigation} class="w-full grow">
-        <.link
-          navigate={nav.href}
-          class={[
-            "grid mx-auto max-w-14 place-items-center rounded-lg p-2.5",
-            if(nav.current,
-              do: "text-zinc-800 bg-zinc-100 dark:text-zinc-200 dark:bg-zinc-800",
-              else: "text-zinc-400"
-            )
-          ]}
-        >
-          <.icon name={if(nav.current, do: nav.icon_active, else: nav.icon)} />
-          <span class="sr-only"><%= nav.label %></span>
-        </.link>
-      </div>
-    </div>
-  </div>
-<% else %>
-  <.header signed_in={not is_nil(@current_user)} user={@current_user} />
-  <div class="min-h-[calc(100dvh-theme(space.40))] mx-auto flex w-full max-w-screen-xl grow flex-col justify-center gap-10 rounded-lg bg-white dark:bg-white">
-    <%= @inner_content %>
-  </div>
-  <.footer class="" />
-<% end %>
+<div class="mx-auto max-w-screen-2xl">
+  <.header current_user={@current_user} />
+</div>
+<main class="mx-auto max-w-screen-2xl">
+  <%= @inner_content %>
+</main>
