--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -15,7 +15,7 @@
     <Turnstile.script />
   </head>
 
-  <body class="font-poppins min-h-dvh bg-white antialiased dark:bg-zinc-900 dark:text-zinc-50">
+  <body class="font-poppins min-h-dvh bg-white leading-tight antialiased dark:bg-zinc-900 dark:text-zinc-50">
     <%= @inner_content %>
   </body>
 </html>
