--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,6 +1,9 @@
-<div class="mx-auto max-w-screen-2xl">
-  <.header current_user={@current_user} />
+<div class="grid-rows-[1fr_auto] mx-auto grid h-screen max-w-screen-2xl overflow-hidden lg:h-auto lg:overflow-auto">
+  <div class="overflow-auto lg:overflow-visible">
+    <.header current_user={@current_user} />
+    <main class="mx-auto w-full max-w-screen-2xl">
+      <%= @inner_content %>
+    </main>
+  </div>
+  <div class="border p-2"></div>
 </div>
-<main class="mx-auto max-w-screen-2xl">
-  <%= @inner_content %>
-</main>
